--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "start:server": "json-server --watch db.json --port 5000",
+    "test": "react-scripts test",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -21,17 +22,26 @@
     "sass": "^1.83.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
     "@types/axios": "^0.14.4",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
+    "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^4.3.4",
+    "babel-jest": "^29.7.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
+    "jest": "^29.7.0",
     "json-server": "^1.0.0-beta.3",
-    "typescript": "~5.6.2",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
     "typescript-eslint": "^8.18.1",
     "vite": "^6.0.3"
   }
