--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "octane-dashboard",
+  "name": "yamm-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,7 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/lab": "^6.0.0-beta.27",
+    "@mui/material": "^6.4.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
