--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.3",
     "sass": "^1.83.0"
   },
   "devDependencies": {
