--- a/package.json
+++ b/package.json
@@ -8,49 +8,38 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "start:server": "json-server --watch db.json --port 5000",
-    "test": "react-scripts test",
+    "test": "vitest",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
-    "@mui/lab": "^6.0.0-beta.27",
     "@mui/material": "^6.4.4",
-    "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.66.0",
     "axios": "^1.7.9",
-    "bootstrap": "^5.3.3",
     "react": "^18.3.1",
-    "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
-    "react-toastify": "^11.0.3",
     "sass": "^1.83.0"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.17.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.1.0",
     "@types/axios": "^0.14.4",
-    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
-    "@types/testing-library__react": "^10.2.0",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-jest": "^29.7.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.13.0",
-    "jest": "^29.7.0",
+    "jsdom": "^26.0.0",
     "json-server": "^1.0.0-beta.3",
-    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "typescript-eslint": "^8.18.1",
-    "vite": "^6.0.3"
+    "vite": "^6.0.3",
+    "vitest": "^3.0.5"
   }
 }
